# backend/api/docs/swagger.yaml
@@ -117,6 +117,8 @@ definitions:
     type: object
   models.PoliticianListItem:
     properties:
+      connection_count:
+        type: integer
       id:
         type: string
       name:
@@ -354,6 +356,10 @@ paths:
         in: query
         name: page_size
         type: integer
+      - description: 'Sort order: connections (default, most linked first) or name'
+        in: query
+        name: sort
+        type: string
       produces:
       - application/json
       responses:
